fix contrast issue on ghost button in reverse

--- a/src/globals/_variants.scss
+++ b/src/globals/_variants.scss
@@ -29,10 +29,10 @@
 
         &:focus-visible:not(:disabled),
         &:hover:not(:disabled) {
-            color: var(--color-accent_light);
+            color: var(--color-light);
 
             border-color: transparent;
-            background-color: var(--color-gray_light20);
+            background-color: var(--color-gray40);
         }
 
         &:active:not(:disabled) {
